@@ -1,5 +1,9 @@
 2011-05-23  Miloslav Trmač  <mitr@redhat.com>
 
+	* tests/basic.at (get-public-key, delete-key, change-passphrase)
+	(sign-text, sign-data, sign-rpm): Run the client in verbose mode when
+	possible.
+
 	* src/client.py (handle_global_options): New option --user-name.
 	* doc/sigul.1.in: Document --user-name.
 	* tests/basic.at (new-user, sign-text): Use --user-name to test user
